# OOP

Lab_1/: CMakeLists.txt  Read.me  function.cpp  main.cpp  test.cpp
Lab_2/: CMakeLists.txt  hex.cpp  hex.hpp  main.cpp  test.cpp
Lab_3/: CMakeLists.txt  Figure.cpp  Figure.h  Point.cpp  Point.h  Read.me  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  Trapezoid.cpp  Trapezoid.h  main.cpp  test.cpp
Lab_4/: Array.cpp  Array.h  CMakeLists.txt  Figure.h  Read.me  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  Trapezoid.cpp  Trapezoid.h  main.cpp  test.cpp
Lab_5/: CMakeLists.txt  MyAllocator.cpp  MyAllocator.h  MyAllocator.hpp  MyStack.cpp  MyStack.h  MyStack.hpp  Read.me  main.cpp  test.cpp
Lab_6/: CMakeLists.txt  Read.me  dragon.cpp  dragon.h  dungeon_location.cpp  dungeon_location.h  elf.cpp  elf.h  knight.cpp  knight.h  main.cpp  npc.cpp  npc.h  test.cpp
Lab_7/: CMakeLists.txt  Read.me  dragon.h  dungeon_location.cpp  dungeon_location.h  elf.h  game_controller.cpp  game_controller.h  knight.h  main.cpp  npc.cpp  npc.h  test.cpp
